src/objects/Stripe_Field_Mapping__mdt.object
<CustomObject>
    <description>Contains field mapping for fields from Stripe&apos;s JSON Webhooks to Stripe Data Custom Object</description>
    <fields>
        <fullName>Data_Type__c</fullName>
        <label>Data Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>String</fullName>
                    <default>true</default>
                    <label>String</label>
                </value>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Map</fullName>
                </value>
                <value>
                    <fullName>Array</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stripe_API_Field_Name__c</fullName>
        <label>Stripe API Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stripe_Data_Field_Text__c</fullName>
        <label>Stripe Data Field Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stripe_Data_Field__c</fullName>
        <label>Stripe Data Field</label>
        <metadataRelationshipControllingField>Stripe_Field_Mapping__mdt.Stripe_Data__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Stripe_Field_Mappings</relationshipLabel>
        <relationshipName>Stripe_Field_Mappings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Stripe_Data__c</fullName>
        <label>Stripe Data</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Stripe_Field_Mappings1</relationshipLabel>
        <relationshipName>Stripe_Field_Mappings1</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Stripe_Object__c</fullName>
        <label>Stripe Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>card</fullName>
                    <default>true</default>
                    <label>card</label>
                </value>
                <value>
                    <fullName>charge</fullName>
                </value>
                <value>
                    <fullName>subscription</fullName>
                </value>
                <value>
                    <fullName>subscription_item</fullName>
                </value>
                <value>
                    <fullName>plan</fullName>
                </value>
                <value>
                    <fullName>customer</fullName>
                </value>
                <value>
                    <fullName>metadata</fullName>
                </value>
                <value>
                    <fullName>invoice</fullName>
                </value>
                <value>
                    <fullName>invoice_item</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Stripe Field Mapping</label>
    <pluralLabel>Stripe Field Mappings</pluralLabel>
</CustomObject>